--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to {{ .app_name }}</h1>
     <p>
-      Visit our <a href="pages/currencies/currencies.html">currencies page</a> to learn more about the currencies we work with.
+      Visit our <a href="pages/currencies/index.html">currencies page</a> to learn more about the currencies we work with.
     </p>
 </body>
 </html>
