--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>{{ .app_name }}</title>
-</head>
-<body>
-    <h1>Welcome to {{ .app_name }}</h1>
-    <p>
-      Visit our <a href="pages/currencies/index.html">currencies page</a> to learn more about the currencies we work with.
-    </p>
-</body>
+  </head>
+  <body
+    class="bg-light d-flex align-items-center justify-content-center"
+    style="min-height: 100vh"
+  >
+    <div class="text-center">
+      <div class="mb-4">
+        <h1 class="display-4">Welcome to {{ .app_name }}</h1>
+      </div>
+      <p class="mb-4">
+        Visit our currencies page to learn more about the currencies we work
+        with.
+      </p>
+      <a href="pages/currencies/index.html" class="btn btn-secondary"
+        >Currencies Page →</a
+      >
+    </div>
+  </body>
 </html>
