--- a/pages/currencies/index.html
+++ b/pages/currencies/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script src="./calculate.js"></script>
     <title>{{ .root.app_name }} - {{ .param.name }}</title>
   </head>
   <body>
@@ -26,8 +27,32 @@
           <p class="mb-0">{{ .param.description }}</p>
         </li>
       </ul>
+      <p class="lead mt-4">See how much {{ .param.name }} is worth in USD Dollars:</p>
+      <div class="input-group mb-3">
+        <input
+          id="amount-input"
+          type="text"
+          class="form-control"
+          placeholder="Enter amount in {{ .param.name }}"
+          aria-label="Amount in {{ .param.name }}"
+        />
+        <span class="input-group-text">Convert to USD</span>
+      </div>
+      <div>
+        <p class="lead">Result:</p>
+        <p class="amount-in-usd">
+          Amount in USD Dollars: <span id="amount-result"></span>
+        </p>
+      </div>
     </div>
   </body>
+  <script>
+    const amountInput = document.getElementById("amount-input");
+    const amountResult = document.getElementById("amount-result");
+    amountInput.onkeyup = () => {
+      toDollar(amountInput, amountResult, {{ .param.usd_rate }})
+    };
+  </script>
 </html>
 {{- end -}}
 
@@ -50,23 +75,19 @@
       <h1 class="display-4">Currencies</h1>
       <p class="lead">Here is a list of all the supported currencies:</p>
       <div class="list-group mt-4">
-        {{- range .currencies }}
-        {{- $fileName := printf "%s.html" .name }}
+        {{- range .currencies }} {{- $fileName := printf "%s.html" .name }}
         <a
           href="{{ $fileName }}"
           target="_blank"
           class="list-group-item list-group-item-action list-group-item-secondary"
           ><strong>{{ .name }}</strong></a
         >
-        {{- /*
-          Because we want the 'currency-page' template to be able to access the
-          root-level variables, but also the current currency data, we need to
-          pass both of them to the template. We can do this by creating a
-          dictionary with the 'root' and 'param' keys, and then passing that
-          dictionary to the template.
-        */ -}}
-        {{- $dict := dict "root" $ "param" . -}}
-        {{- toFile $fileName "currency-page" $dict -}} {{- end }}
+        {{- /* Because we want the 'currency-page' template to be able to access
+        the root-level variables, but also the current currency data, we need to
+        pass both of them to the template. We can do this by creating a
+        dictionary with the 'root' and 'param' keys, and then passing that
+        dictionary to the template. */ -}} {{- $dict := dict "root" $ "param" .
+        -}} {{- toFile $fileName "currency-page" $dict -}} {{- end }}
       </div>
     </div>
   </body>
