--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +24,7 @@
         Visit our currencies page to learn more about the currencies we work
         with.
       </p>
-      <a href="pages/currencies/index.html" class="btn btn-secondary"
+      <a href="pages/currencies/index.html" class="btn"
         >Currencies Page →</a
       >
     </div>
